Lots of fun things happening with Packery

--- a/bongo/apps/frontend/assets/scss/components/_all.scss
+++ b/bongo/apps/frontend/assets/scss/components/_all.scss
@@ -1,6 +1,6 @@
 @import 'header';
 @import 'basement-menu';
-@import 'deck';
+@import 'card';
 @import 'errors';
 @import 'disqus';
 @import 'scribd';
