--- a/bongo/apps/frontend/assets/scss/_grids.scss
+++ b/bongo/apps/frontend/assets/scss/_grids.scss
@@ -1,51 +1,12 @@
-$pad: 0;
+$pad-outer: 25px;
+$pad-inner: 7px;
 
 %clearfix {
     &:after {
-        content: "\00A0";
+        content: '\00A0';
         display: table;
         clear: both;
     }
 }
 
-.grid {
-    background: white;
-    margin: 0 0 $pad 0;
-
-    @extend %clearfix;
-}
-
-[class*='col-'] {
-    float: left;
-    padding-right: $pad;
-    .grid &:last-of-type {
-        padding-right: 0;
-    }
-    @extend %clearfix;
-}
-.col-2-3 {
-    width: 66.66%;
-}
-.col-1-3 {
-    width: 33.33%;
-}
-.col-1-6 {
-    width: 16.66%;
-}
-.col-1-2 {
-    width: 50%;
-}
-.col-1-4 {
-    width: 25%;
-}
-.col-1-8 {
-    width: 12.5%;
-}
-
-/* Opt-in outside padding */
-.grid-pad {
-    padding: $pad 0 $pad $pad;
-    [class*='col-']:last-of-type {
-        padding-right: $pad;
-    }
-}
+$deck-cols: 6;
