--- a/ansible/roles/web/templates/nginx_site_config.j2
+++ b/ansible/roles/web/templates/nginx_site_config.j2
@@ -13,16 +13,16 @@ upstream rq_dashboard {
 server {
     listen      80;
     server_name {{ site_url }};
-#     rewrite     ^ https://$server_name$request_uri? permanent;
-# }
-# 
-# server {
-#     listen              443 default_server ssl spdy;
-#     server_name         {{ site_url }};
-# 	ssl_certificate     {{ ssl_dest_dir }}/{{ application_name }}.crt;
-# 	ssl_certificate_key {{ ssl_dest_dir }}/{{ application_name }}.key;
-# 
-#     add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload';
+    rewrite     ^ https://$server_name$request_uri? permanent;
+}
+
+server {
+    listen              443 default_server ssl http2;
+    server_name         {{ site_url }};
+    ssl_certificate     {{ ssl_dest_dir }}/{{ application_name }}.crt;
+    ssl_certificate_key {{ ssl_dest_dir }}/{{ application_name }}.key;
+
+    # add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload';
 
     client_max_body_size 4G;
 
